--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,13 @@ Direct access to other online demonstrations - <a href="https://www.gcbasic.com/
 
 ---
 
+# Version 06.15.2025.02
+- Changed color and order of the Toolbox categories
+- Add capability to set PORT constant to ON or OFF
+- Add capability to GET the state of a PORT constant, or the value of of non-Port constant
+- Add MOTOR Controller demo
+
+
 # Version 06.14.2025.04
 - Add example guide via a dynamic webpage
 - Changed Decorative text block to have no connections.
