--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,10 @@ Direct access to other online demonstrations - <a href="https://www.gcbasic.com/
 
 ---
 
+# Version 06.17.2025.01
+- Implemented tabbed User Interface to support viewing of generated code
+
+
 # Version 06.15.2025.03
 - Fixed File Open and rationalised the loading of XMLs
 - Changed color and order of the Toolbox categories
