--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,10 @@ Direct access to other online demonstrations - <a href="https://www.gcbasic.com/
 
 ---
 
+# Version 06.18.2025.01
+- Implemented console log warning.
+
+
 # Version 06.17.2025.01
 - Implemented tabbed User Interface to support viewing of generated code
 
