--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,10 @@ Direct access to other online demonstrations - <a href="https://www.gcbasic.com/
 ---
 
 # Version 06.18.2025.01
+- Implemented flashing GCBASIC Code tab when generate code selected.
+
+
+# Version 06.18.2025.01
 - Implemented console log warning.
 
 
